fixed spacing and padding to array

--- a/lil-einsteins/src/components/Components.css
+++ b/lil-einsteins/src/components/Components.css
@@ -23,7 +23,9 @@
   color: black;
 }
 
-
+.layer2, .layer3, .layer4, .layer5{
+  display: inline-block;
+}
 /*---------------------/
 
 
